--- a/lib/x86_64-unknown-none-elf.json
+++ b/lib/x86_64-unknown-none-elf.json
@@ -17,7 +17,7 @@
 	"frame-pointer": "always",
 	"pre-link-args": {
 		"ld.lld": [
-			"-Tx86_64/src/x86_64/kernel.ld",
+			"-Tx86_64/src/kernel.ld",
 			"-nostdlib"
 		]
 	}
