aarch64 kernel (raspi3) (#6)
* Aarch64 r9
Build and run aarch64 as follows:
  `ARCH=aarch64 TARGET=aarch64-unknown-none-elf cargo xtask qemu`
- Added support for xtask to build and run aarch64 kernel (raspi3)
- Initial raspi3-focussed aarch64 kernel
- Added raspi3 uart support (pl011)
- Added vscode debugger qemu attach config

Signed-off-by: Graham MacDonald <grahamamacdonald@gmail.com>

--- a/.github/workflows/xtask.yml
+++ b/.github/workflows/xtask.yml
@@ -10,13 +10,23 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  build-x86_64:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo xtask build
+      run: cargo xtask build --verbose
     - name: Run tests
-      run: cargo xtask test
+      run: cargo xtask test --verbose
+
+  build-aarch64:
+    runs-on: ubuntu-latest
+    env:
+      ARCH: aarch64
+      TARGET: aarch64-unknown-none-elf
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build
+      run: cargo xtask build --verbose
