--- a/.github/workflows/xtask.yml
+++ b/.github/workflows/xtask.yml
@@ -16,15 +16,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo xtask build --arch x86_64 --verbose
+      run: cargo xtask build --arch x86-64 --verbose
     - name: Run tests
       run: cargo xtask test --verbose
 
   build-aarch64:
     runs-on: ubuntu-latest
-    env:
-      ARCH: aarch64
-      TARGET: aarch64-unknown-none-elf
 
     steps:
     - uses: actions/checkout@v3
