--- a/.github/workflows/xtask.yml
+++ b/.github/workflows/xtask.yml
@@ -10,6 +10,14 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Run tests
+      run: cargo xtask test --verbose
+
   build-x86_64:
     runs-on: ubuntu-latest
 
@@ -17,8 +25,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo xtask build --arch x86-64 --verbose
-    - name: Run tests
-      run: cargo xtask test --verbose
 
   build-aarch64:
     runs-on: ubuntu-latest
@@ -27,3 +33,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo xtask build --arch aarch64 --verbose
+
+  build-riscv64:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build
+      run: cargo xtask build --arch riscv64gc --verbose
