--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
 channel = "nightly"
-components = [ "rustfmt", "rust-src", "clippy", "llvm-tools-preview" ]
+components = [ "rustfmt", "rust-src", "clippy", "llvm-tools" ]
