use a configuration file to setup the kernel
Signed-off-by: Stefan Hertenberger <erde74@gmail.com>

--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2018"
 
 [dependencies]
 clap = { version = "*", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+toml = "*"
