initial boot page table adapted from rCore see https://github.com/rcore-os/rCore
Signed-off-by: Stefan Hertenberger <erde74@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "editor.formatOnSave": true,
     "editor.formatOnPaste": true,
-    "git.alwaysSignOff": true
+    "git.alwaysSignOff": true,
+    "rust-analyzer.linkedProjects": [
+        "./riscv64/Cargo.toml",
+        "./riscv64/Cargo.toml",
+        "./riscv64/Cargo.toml",
+        "./riscv64/Cargo.toml",
+        "./riscv64/Cargo.toml",
+        "./riscv64/Cargo.toml"
+    ]
 }
