--- a/lib/riscv64-unknown-none-elf.json
+++ b/lib/riscv64-unknown-none-elf.json
@@ -17,6 +17,7 @@
 	"target-pointer-width": "64",
 	"pre-link-args": {
 		"ld.lld": [
+			"-Triscv64/src/platform/virt/kernel.ld",
 			"-nostdlib"
 		]
 	}
