--- a/riscv64/lib/config_default.toml
+++ b/riscv64/lib/config_default.toml
@@ -7,7 +7,7 @@ buildflags = [
 [link]
 arch = 'riscv'
 script = 'riscv64/lib/kernel.ld'
-load-address = '0x80200000'
+load-address = '0xffffffffc0200000'
 
 [config]
 platform = "virt"
