--- a/aarch64/lib/config_default.toml
+++ b/aarch64/lib/config_default.toml
@@ -5,55 +5,8 @@ buildflags = [
 ]
 
 [link]
-arch = 'aarch64'
+# linker script to use
 script = 'aarch64/lib/kernel.ld'
 
-# This needs to change to a virtual address once we set up paging.
+# kernel load address to insert into kernel.ld
 load-address = '0xffff800000100000 - 0x80000'
-
-[config]
-platform = "virt"
-features = []
-
-dev = [
-    'arch',
-    'cap',
-    'cons',
-    'dup',
-    'env',
-    'ip',
-    'mnt',
-    'mntn',
-    'pipe',
-    'proc',
-    'regress',
-    'root',
-    'segment',
-    'srv',
-    'uart',
-    'ws'
-]
-
-ip = [
-    'tcp',
-    'udp',
-    'ipifc',
-    'icmp',
-    'icmp6',
-    'gre'
-]
-
-link = [
-    'ethermedium',
-    'loopbackmedium',
-    'netdevmedium'
-]
-
-nodev = [
-    'kbin',
-    'kprof'
-]
-
-nouart = [
-    'pci'
-]
