--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "xtask"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "*", features = ["derive"] }
-serde = { version = "*", features = ["derive"] }
-toml = "*"
+clap = { version = "4.2.4", features = ["derive"] }
+serde = { version = "1.0.160", features = ["derive"] }
+toml = "0.7.3"
