reorganization and clean up
Signed-off-by: Stefan Hertenberger <erde74@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
         "./riscv64/Cargo.toml",
         "./riscv64/Cargo.toml",
         "./riscv64/Cargo.toml"
-    ]
+    ],
+    "rust-analyzer.showUnlinkedFileNotification": false
 }
