--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.formatOnSave": true,
     "editor.formatOnPaste": true,
-    "git.alwaysSignOff": true
+    "git.alwaysSignOff": true,
+    "rust-analyzer.showUnlinkedFileNotification": false
 }
