--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,7 @@
 [toolchain]
-channel = "nightly"
+channel = "nightly-2023-06-05"
 components = [ "rustfmt", "rust-src", "clippy", "llvm-tools" ]
+targets = [
+  "aarch64-unknown-none-softfloat",
+  "riscv64imac-unknown-none-elf",
+]
