Add missing rustup target
Signed-off-by: Graham MacDonald <grahamamacdonald@gmail.com>

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -4,4 +4,5 @@ components = [ "rustfmt", "rust-src", "clippy", "llvm-tools" ]
 targets = [
   "aarch64-unknown-none-softfloat",
   "riscv64imac-unknown-none-elf",
+  "x86_64-unknown-none"
 ]
