--- a/riscv64/Cargo.toml
+++ b/riscv64/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 port = { path = "../port" }
+bitflags = "2.3.3"
+bit_field = "0.10.2"
 
 [features]
 opensbi = []
