--- a/riscv64/Cargo.toml
+++ b/riscv64/Cargo.toml
@@ -8,6 +8,8 @@ default-target = "riscv64imac-unknown-none-elf"
 
 [dependencies]
 port = { path = "../port" }
+bitflags = "2.3.3"
+bit_field = "0.10.2"
 
 [features]
 opensbi = []
