--- a/riscv64/Cargo.toml
+++ b/riscv64/Cargo.toml
@@ -1,7 +1,10 @@
+cargo-features = ["per-package-target"]
+
 [package]
 name = "riscv64"
 version = "0.1.0"
 edition = "2021"
+default-target = "riscv64imac-unknown-none-elf"
 
 [dependencies]
 port = { path = "../port" }
