cargo check uses xtask Various build improvements: - Add support for `cargo xtask check` - Add .vscode/settings.json to have rust-analyzer use `cargo xtask check` - Minor code changes to fix build with latest nightly and remove some errors - Change aarch64 target to aarch64-unknown-none (from aarch64-unknown-none-softfloat)
Signed-off-by: Graham MacDonald <grahamamacdonald@gmail.com>

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -2,7 +2,7 @@
 channel = "nightly-2023-06-05"
 components = [ "rustfmt", "rust-src", "clippy", "llvm-tools" ]
 targets = [
-  "aarch64-unknown-none-softfloat",
+  "aarch64-unknown-none",
   "riscv64imac-unknown-none-elf",
   "x86_64-unknown-none"
 ]
