--- a/aarch64/Cargo.toml
+++ b/aarch64/Cargo.toml
@@ -4,7 +4,7 @@ cargo-features = ["per-package-target"]
 name = "aarch64"
 version = "0.1.0"
 edition = "2021"
-default-target = "aarch64-unknown-none-softfloat"
+default-target = "aarch64-unknown-none"
 
 [dependencies]
 bitstruct = "0.1"
