--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.2.4", features = ["derive"] }
+rustup-configurator = "0.1.1"
 serde = { version = "1.0.160", features = ["derive"] }
 toml = "0.8.0"
