Fix all warnings, lints, etc
Signed-off-by: Graham MacDonald <grahamamacdonald@gmail.com>

--- a/riscv64/Cargo.toml
+++ b/riscv64/Cargo.toml
@@ -11,3 +11,8 @@ port = { path = "../port" }
 
 [features]
 opensbi = []
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = [
+    'cfg(platform, values("nezha", "virt"))',
+] }
