trivial: fix clippy lints
Signed-off-by: Dan Cross <cross@gajendra.net>

--- a/riscv64/Cargo.toml
+++ b/riscv64/Cargo.toml
@@ -11,3 +11,6 @@ port = { path = "../port" }
 
 [features]
 opensbi = []
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(platform, values("nezha"))', 'cfg(platform, values("virt"))'] }
