riscv64: use SBI SRST extension instead of legacy SBI for system shutdown
Legacy SBI have been deprecated years ago (on Jun 9, 2021). Modern
RISC-V SBI firmware would use SBI SRST extension to shutdown an S-mode
environment; we use `sbi-rt` crate for this purpose. Unused feature gate
`opensbi` is removed, as RISC-V SBI support does not usually satisfy
which implementation we'd use, unless e.g. fixing implementation-specific
bugs.

Signed-off-by: Zhouqi Jiang <luojia@hust.edu.cn>

--- a/riscv64/Cargo.toml
+++ b/riscv64/Cargo.toml
@@ -8,9 +8,9 @@ default-target = "riscv64gc-unknown-none-elf"
 
 [dependencies]
 port = { path = "../port" }
+sbi-rt = "0.0.3"
 
 [features]
-opensbi = []
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(platform, values("nezha"))', 'cfg(platform, values("virt"))'] }
