Fix small mapping issues, update toolchain
Signed-off-by: Graham MacDonald <grahamamacdonald@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
         "xtask",
         "check",
         "--json"
-    ]
+    ],
+    "lldb.displayFormat": "auto",
+    "lldb.showDisassembly": "auto",
+    "lldb.dereferencePointers": true,
+    "lldb.consoleMode": "commands"
 }
