--- a/aarch64/Cargo.toml
+++ b/aarch64/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 default-target = "aarch64-unknown-none"
 
 [dependencies]
+aarch64-cpu = "9.4.0"
 bitstruct = "0.1"
 port = { path = "../port" }
 num_enum = { version = "0.7", default-features = false }
