--- a/lib/aarch64-unknown-none-elf.json
+++ b/lib/aarch64-unknown-none-elf.json
@@ -1,19 +1,17 @@
 {
-	"arch": "aarch64",
-	"data-layout": "e-m:e-i8:8:32-i16:16:32-i64:64-i128:128-n32:64-S128-Fn32",
-	"disable-redzone": true,
-	"executables": true,
-	"features": "+strict-align,+neon,+fp-armv8",
-	"linker": "rust-lld",
-	"linker-flavor": "ld.lld",
-	"llvm-target": "aarch64-unknown-none",
-	"max-atomic-width": 128,
-	"panic-strategy": "abort",
-	"relocation-model": "pie",
-	"target-pointer-width": "64",
-	"pre-link-args": {
-		"ld.lld": [
-			"-nostdlib"
-		]
-	}
+  "arch": "aarch64",
+  "data-layout": "e-m:e-p270:32:32-p271:32:32-p272:64:64-i8:8:32-i16:16:32-i64:64-i128:128-n32:64-S128-Fn32",
+  "disable-redzone": true,
+  "executables": true,
+  "features": "+strict-align,+neon,+fp-armv8",
+  "linker": "rust-lld",
+  "linker-flavor": "ld.lld",
+  "llvm-target": "aarch64-unknown-none",
+  "max-atomic-width": 128,
+  "panic-strategy": "abort",
+  "relocation-model": "pie",
+  "target-pointer-width": "64",
+  "pre-link-args": {
+    "ld.lld": ["-nostdlib"]
+  }
 }
