Restore and fix x86_64-unknown-none-elf.json
Signed-off-by: Graham MacDonald <grahamamacdonald@gmail.com>

--- a/lib/x86_64-unknown-none-elf.json
+++ b/lib/x86_64-unknown-none-elf.json
@@ -12,10 +12,11 @@
   "relocation-model": "pie",
   "code-model": "medium",
   "disable-redzone": true,
-  "features": "",
+  "features": "-mmx,-sse,+soft-float",
   "panic-strategy": "abort",
   "frame-pointer": "always",
   "pre-link-args": {
     "ld.lld": ["-nostdlib"]
-  }
+  },
+  "rustc-abi": "x86-softfloat"
 }
