update: Update Rust, fix revealed issues
Signed-off-by: Dan Cross <cross@gajendra.net>

--- a/lib/x86_64-unknown-none-elf.json
+++ b/lib/x86_64-unknown-none-elf.json
@@ -13,6 +13,7 @@
 	"code-model": "medium",
 	"disable-redzone": true,
 	"features": "-mmx,-sse,+soft-float",
+	"rustc-abi": "x86-softfloat",
 	"panic-strategy": "abort",
 	"frame-pointer": "always",
 	"pre-link-args": {
