traps: Implement exception handling for x86_64
Add exception handling for x86_64, which also involves setting
up a proper `Mach` structure, as well as doing all of the bits
of required architectural goo.

Signed-off-by: Dan Cross <cross@gajendra.net>

--- a/lib/riscv64-unknown-none-elf.json
+++ b/lib/riscv64-unknown-none-elf.json
@@ -6,7 +6,6 @@
 	"eh-frame-header": false,
 	"emit-debug-gdb-scripts": false,
 	"features": "+m,+a,+f,+d,+c",
-	"is-builtin": false,
 	"linker": "rust-lld",
 	"linker-flavor": "ld.lld",
 	"llvm-abiname": "lp64d",
@@ -14,7 +13,7 @@
 	"max-atomic-width": 64,
 	"panic-strategy": "abort",
 	"relocation-model": "pie",
-	"target-pointer-width": "64",
+	"target-pointer-width": 64,
 	"pre-link-args": {
 		"ld.lld": [
 			"-nostdlib"
