--- a/lib/aarch64-unknown-none-elf.json
+++ b/lib/aarch64-unknown-none-elf.json
@@ -10,7 +10,7 @@
   "max-atomic-width": 128,
   "panic-strategy": "abort",
   "relocation-model": "pie",
-  "target-pointer-width": "64",
+  "target-pointer-width": 64,
   "pre-link-args": {
     "ld.lld": ["-nostdlib"]
   }
